--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-ga": "^1.2.3",
     "react-scripts": "4.0.3",
     "react-use": "^17.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
