--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "lint-fix": "eslint --ext js --fix src",
     "lint": "eslint --ext js src",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -r git@github.com:thirukural-karpom/thirukural-karpom.github.io.git -b main -d build"
+    "vercel": "gh-pages -r git@canabadyweb.github.com:canabadyweb/thirukural -b main -d build",
+    "deploy": "gh-pages -r git@tamlit.github.com:thamizh-literature/thamizh-literature.github.io -b main -d build"
   },
   "eslintConfig": {
     "extends": [
